全站語氣層級校準：timeline思想演進化、feed思考實驗化、pillar描述領域化

--- a/index.html
+++ b/index.html
@@ -513,19 +513,19 @@
           <div class="about-timeline">
             <div class="timeline-item">
               <div class="timeline-year">2026</div>
-              <div class="timeline-text" data-i18n="about.timeline.2026">循環經濟 · 台日跨域合作 · 秩序重建的實踐</div>
+              <div class="timeline-text" data-i18n="about.timeline.2026">秩序如何在物質流與跨文化信任中重新站立</div>
             </div>
             <div class="timeline-item">
               <div class="timeline-year">2020–25</div>
-              <div class="timeline-text" data-i18n="about.timeline.2020">永續建築與再生策略</div>
+              <div class="timeline-text" data-i18n="about.timeline.2020">在建築與土地中理解再生的物質條件</div>
             </div>
             <div class="timeline-item">
               <div class="timeline-year">2018–20</div>
-              <div class="timeline-text" data-i18n="about.timeline.2018">食農供應鏈與信任結構</div>
+              <div class="timeline-text" data-i18n="about.timeline.2018">供應鏈教會我：系統的瓶頸永遠在信任</div>
             </div>
             <div class="timeline-item">
               <div class="timeline-year">2013–18</div>
-              <div class="timeline-text" data-i18n="about.timeline.2013">創業加速器 · 在市場中驗證想法</div>
+              <div class="timeline-text" data-i18n="about.timeline.2013">在市場的反覆碰撞中學習秩序的代價</div>
             </div>
             <div class="timeline-item">
               <div class="timeline-year">2003</div>
@@ -543,23 +543,23 @@
             <div class="about-pillar-grid">
               <div class="about-pillar-item">
                 <h4><span class="pillar-dot" style="background:var(--accent-ai)"></span> 智能與秩序 Intelligence &amp; Order</h4>
-                <p data-i18n="about.pillar.ai.desc">AI 與產業秩序重構、多模型認知協作、個體能力邊界的重新劃定</p>
+                <p data-i18n="about.pillar.ai.desc">當機器開始參與判斷，人與技術之間的秩序如何重新安排</p>
               </div>
               <div class="about-pillar-item">
                 <h4><span class="pillar-dot" style="background:var(--accent-circular)"></span> 再生系統 Regenerative Systems</h4>
-                <p data-i18n="about.pillar.circular.desc">循環經濟、城市採礦、物質流治理、碳交易與 ESG 制度設計</p>
+                <p data-i18n="about.pillar.circular.desc">物質不該只有一次生命。從城市採礦到制度設計，重建資源流動的秩序</p>
               </div>
               <div class="about-pillar-item">
                 <h4><span class="pillar-dot" style="background:var(--accent-faith)"></span> 文明與人性 Civilization &amp; Human Nature</h4>
-                <p data-i18n="about.pillar.faith.desc">神學與社會秩序、人性尊嚴的哲學基礎、倦怠社會、技術時代的意義危機</p>
+                <p data-i18n="about.pillar.faith.desc">在效率的洪流中，什麼讓人之所以為人。從神學到社會批判的持續追問</p>
               </div>
               <div class="about-pillar-item">
                 <h4><span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與建構 Creation &amp; Enterprise</h4>
-                <p data-i18n="about.pillar.startup.desc">創業作為秩序建造、投資與信任結構、從實踐中提煉方法論</p>
+                <p data-i18n="about.pillar.startup.desc">創業不只是造產品，是在真實世界中建造秩序。信任、風險與方法論的提煉</p>
               </div>
               <div class="about-pillar-item" style="grid-column: 1 / -1;">
                 <h4><span class="pillar-dot" style="background:var(--accent-life)"></span> 沉思與記憶 Reflections &amp; Memory</h4>
-                <p data-i18n="about.pillar.life.desc">閱讀與思想記錄、家族記憶、生命中不可量化的事物</p>
+                <p data-i18n="about.pillar.life.desc">那些無法被量化、卻定義了一個人的事物。閱讀、記憶與生命的重量</p>
               </div>
             </div>
           </div>
@@ -583,42 +583,42 @@
           <span class="feed-platform" style="color:var(--accent-ai)">𝕏 X</span>
           <span class="feed-date">2026.02.19 14:10</span>
         </div>
-        <p>讓不同的 AI 針對同一個問題互相質疑，看見的角度比只問一個模型多得多。工具會一直更新，但核心問題不變：怎麼在資訊過載中做出更可靠的判斷。</p>
+        <p>一個人做判斷時最大的盲點，是不知道自己沒看見什麼。讓不同的認知模型互相質疑同一個問題，不是為了找標準答案，是為了逼自己看見遺漏的角度。工具會換，但這個問題不會消失。</p>
       </div>
       <div class="feed-item">
         <div class="feed-header">
           <span class="feed-platform" style="color:#0A66C2">in LinkedIn</span>
           <span class="feed-date">2026.02.19 14:30</span>
         </div>
-        <p>【用多模型碰撞來逼近更好的判斷】單一 AI 給的是觀點，多個 AI 互相質疑才接近判斷。我正在建構的認知協作框架，核心不是追最新模型，而是建立一套可靠的思考支撐結構。</p>
+        <p>【當判斷比資訊更稀缺】資訊過載的時代，稀缺的不是答案，是判斷。單一來源給的是觀點，多重來源的碰撞才接近可靠的判斷。我在思考的是：個體如何為自己建立一套認知的支撐結構，而不是被資訊的洪流帶著走。</p>
       </div>
       <div class="feed-item">
         <div class="feed-header">
           <span class="feed-platform" style="color:var(--accent-faith)">📘 Facebook</span>
           <span class="feed-date">2026.02.19 15:10</span>
         </div>
-        <p>最近在做一個實驗：讓不同的 AI 針對同一個議題互相辯論，再由另一個模型做事實查核。發現 AI 的價值不在給標準答案，而在幫我看見沒想到的角度。重點不是工具多厲害，是人怎麼用工具來強化自己的判斷力。</p>
+        <p>最近一直在想一個問題：為什麼同一件事，問不同的人會得到完全不同的判斷？所以我開始嘗試讓不同的思考框架互相碰撞同一個問題，再從中抽取共識與分歧。發現最有價值的不是最終結論，而是過程中暴露出來的、我原本沒意識到的盲區。</p>
       </div>
       <div class="feed-item">
         <div class="feed-header">
           <span class="feed-platform" style="color:var(--accent-life)">◉ Threads</span>
           <span class="feed-date">2026.02.19 14:20</span>
         </div>
-        <p>AI 的價值不在給標準答案，在幫你看見沒想到的角度。讓不同的模型互相質疑同一個問題，比只聽一個回答靠譜多了。</p>
+        <p>做判斷最危險的時刻，是你覺得自己已經想清楚了。讓不同的視角互相質疑同一個問題，不是為了推翻結論，是為了測試結論的強度。</p>
       </div>
       <div class="feed-item">
         <div class="feed-header">
           <span class="feed-platform" style="color:#FF4500">🔴 Reddit</span>
           <span class="feed-date">2026.02.19 14:50</span>
         </div>
-        <p>I've been experimenting with having multiple AI models debate the same question and cross-check each other's reasoning. The insight isn't about which model is smartest — it's about building a cognitive structure that produces more reliable thinking than any single source.</p>
+        <p>The hardest part of making good decisions isn't lack of information — it's not knowing what you're missing. I've been exploring how structured disagreement between different reasoning frameworks can surface blind spots. The value isn't in any single answer, but in building a cognitive structure that makes your thinking more resilient.</p>
       </div>
       <div class="feed-item">
         <div class="feed-header">
           <span class="feed-platform" style="color:#FF0000">▶ YouTube</span>
           <span class="feed-date">2026.02.19 15:00</span>
         </div>
-        <p>【讓多個 AI 互相辯論，逼近更好的判斷】單一模型給觀點，多模型碰撞才接近判斷。這不是在比哪個 AI 聰明，而是在建構一個人做決策時的認知支撐結構。</p>
+        <p>【判斷力是可以被建構的嗎？】我們每天做無數判斷，但很少停下來問：我的判斷夠可靠嗎？讓不同的思考框架針對同一個問題互相碰撞，不是在找最聰明的答案，是在測試自己思考的盲區。這是一個關於認知結構的思考實驗。</p>
       </div>
     </div>
   </div>
