About主文重寫：去公司名、強化思想演進敘事

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
         <div class="about-photo">PK</div>
         <div class="about-content">
           <h2 data-i18n="about.name">Paul Kuo 郭曜郎</h2>
-          <p data-i18n="about.intro">我的思考起點不是技術，是秩序。</p>
+          <p data-i18n="about.intro">我的思考起點不是技術，而是秩序。</p>
           <p data-i18n="about.p1">十五年的神學訓練讓我習慣追問一個問題：在混亂中，什麼樣的結構能承載意義？
             這個問題帶我離開神學院，走進創業——不是因為放棄了信仰，
             而是因為我想在真實世界裡驗證：秩序能不能被重新建造，而不只是被論述。
