細部文字修正：帆船→運動、PCB金屬回收→PCB回收

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
           <span class="pillar-dot" style="background:var(--accent-life)"></span> 沉思與記憶
         </div>
         <h3 data-i18n="blog.page.life2.title">到知天命之年，才見證台灣與海洋的深厚聯繫</h3>
-        <p data-i18n="blog.page.life2.desc">安平的帆船上，才發現自己跟這座島嶼還有太多沒說完的故事。</p>
+        <p data-i18n="blog.page.life2.desc">在運動中重新感受身體與這座島嶼的連結，才發現還有太多沒說完的故事。</p>
         <div class="content-card-footer">
           <span>2023</span>
           <span class="platform-badge">Facebook</span>
