--- a/index.html
+++ b/index.html
@@ -496,19 +496,10 @@
         <div class="about-content">
           <h2 data-i18n="about.name">Paul Kuo 郭曜郎</h2>
           <p data-i18n="about.intro">我的思考起點不是技術，而是秩序。</p>
-          <p data-i18n="about.p1">十五年的神學訓練讓我習慣追問一個問題：在混亂中，什麼樣的結構能承載意義？
-            這個問題帶我離開神學院，走進創業——不是因為放棄了信仰，
-            而是因為我想在真實世界裡驗證：秩序能不能被重新建造，而不只是被論述。
-          </p>
-          <p data-i18n="about.p2">從創業加速器、食農供應鏈、到永續建築，
-            我花了十多年時間在不同的產業裡處理同一件事：系統的再生不是技術問題，是信任問題。
-            誰願意承擔轉型的風險，誰就決定了新秩序的形狀。
-          </p>
-          <p data-i18n="about.p3">現在，我的工作橫跨台日產業合作與循環經濟的數據基礎設施。
-            人工智慧在這個過程中不可或缺——
-            但我更關心的始終是：當個體的能力邊界被技術重新劃定，
-            人如何保有判斷、創造與承擔責任的能力。秩序值得被重建，但不是以犧牲尊嚴為代價。
-          </p>
+          <p data-i18n="about.p1">十五年的神學訓練，讓我習慣追問一個問題：在混亂與加速之中，什麼樣的結構能真正承載意義？這個問題帶我離開神學院，走進創業。不是因為放棄信仰，而是因為我想在真實世界裡驗證——秩序與倫理是否能重新建造。</p>
+          <p data-i18n="about.p2">從創業生態的形成、食農供應鏈的重構，到永續建築與空間實踐，我花了十多年時間理解：系統的再生從來不是單純的技術問題，而是信任與責任的建立。願意承擔轉型的風險，就是參與了新秩序的塑形。</p>
+          <p data-i18n="about.p3">現在，我的工作是跨領域的台日產業合作與循環經濟的數據基礎設施建構。此外，隨著人工智慧在近年迅速成為基礎設施的一部分，技術正在重新界定能力與決策的尺度。</p>
+          <p data-i18n="about.p4">技術本身沒有意圖，但效率的邏輯若缺乏節制，往往會壓縮人的判斷與承擔空間。因此，我不只關心技術能走多快，而是人是否仍能在加速之中保有尊嚴與主體性。</p>
           <!-- [D] SDTI 移除，改台日跨域合作 -->
           <div class="about-timeline">
             <div class="timeline-item">
