Timeline反轉為正序+文字重寫為思想演進敘事

--- a/index.html
+++ b/index.html
@@ -503,28 +503,29 @@
           <!-- [D] SDTI 移除，改台日跨域合作 -->
           <div class="about-timeline">
             <div class="timeline-item">
-              <div class="timeline-year">2026</div>
-              <div class="timeline-text" data-i18n="about.timeline.2026">秩序如何在物質流與跨文化信任中重新站立</div>
-            </div>
-            <div class="timeline-item">
-              <div class="timeline-year">2020–25</div>
-              <div class="timeline-text" data-i18n="about.timeline.2020">在建築與土地中理解再生的物質條件</div>
-            </div>
-            <div class="timeline-item">
-              <div class="timeline-year">2018–20</div>
-              <div class="timeline-text" data-i18n="about.timeline.2018">供應鏈教會我：系統的瓶頸永遠在信任</div>
-            </div>
-            <div class="timeline-item">
-              <div class="timeline-year">2013–18</div>
-              <div class="timeline-text" data-i18n="about.timeline.2013">在市場的反覆碰撞中學習秩序的代價</div>
+              <div class="timeline-year">15 年</div>
+              <div class="timeline-text" data-i18n="about.timeline.seminary">神學訓練 · 追問秩序與意義的原點</div>
             </div>
             <div class="timeline-item">
               <div class="timeline-year">2003</div>
-              <div class="timeline-text" data-i18n="about.timeline.2003">從神學院走入真實世界，驗證秩序能否被重新建造</div>
+              <div class="timeline-text" data-i18n="about.timeline.2003">離開神學院，在真實世界驗證秩序是否可被建造</div>
             </div>
             <div class="timeline-item">
-              <div class="timeline-year">15 年</div>
-              <div class="timeline-text" data-i18n="about.timeline.seminary">神學訓練 · 追問秩序與意義的起點</div>
+              <div class="timeline-year">2013–18</div>
+              <div class="timeline-text" data-i18n="about.timeline.2013">在市場試煉中理解秩序的代價與邊界</div>
+            </div>
+            <div class="timeline-item">
+              <div class="timeline-year">2018–20</div>
+              <div class="timeline-text" data-i18n="about.timeline.2018">在供應鏈重構中確認信任是系統的核心</div>
+            </div>
+            <div class="timeline-item">
+              <div class="timeline-year">2020–25</div>
+              <div class="timeline-text" data-i18n="about.timeline.2020">在空間與土地實踐中驗證再生的物質條件</div>
+            </div>
+            <div class="timeline-item">
+              <div class="timeline-year">2026</div>
+              <div class="timeline-text" data-i18n="about.timeline.2026">在智能重塑生產與決策之際，重構物質與信任的秩序</div>
+            </div>
             </div>
           </div>
 
