Five Pillars移出about-grid為全寬獨立區塊+五欄排列

--- a/index.html
+++ b/index.html
@@ -529,37 +529,12 @@
             </div>
           </div>
 
-          <!-- Five Pillars 五根柱子 detail -->
-          <div class="about-pillars-section">
-            <h3 data-i18n="about.pillars.title">Five Pillars 五根柱子</h3>
-            <div class="about-pillar-grid">
-              <div class="about-pillar-item">
-                <h4><span class="pillar-dot" style="background:var(--accent-ai)"></span> 智能與秩序 Intelligence &amp; Order</h4>
-                <p data-i18n="about.pillar.ai.desc">當機器開始參與判斷，人與技術之間的秩序如何重新安排</p>
-              </div>
-              <div class="about-pillar-item">
-                <h4><span class="pillar-dot" style="background:var(--accent-circular)"></span> 再生系統 Regenerative Systems</h4>
-                <p data-i18n="about.pillar.circular.desc">物質不該只有一次生命。從城市採礦到制度設計，重建資源流動的秩序</p>
-              </div>
-              <div class="about-pillar-item">
-                <h4><span class="pillar-dot" style="background:var(--accent-faith)"></span> 文明與人性 Civilization &amp; Human Nature</h4>
-                <p data-i18n="about.pillar.faith.desc">在效率的洪流中，什麼讓人之所以為人。從神學到社會批判的持續追問</p>
-              </div>
-              <div class="about-pillar-item">
-                <h4><span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與建構 Creation &amp; Enterprise</h4>
-                <p data-i18n="about.pillar.startup.desc">創業不只是造產品，是在真實世界中建造秩序。信任、風險與方法論的提煉</p>
-              </div>
-              <div class="about-pillar-item" style="grid-column: 2 / 3;">
-                <h4><span class="pillar-dot" style="background:var(--accent-life)"></span> 沉思與記憶 Reflections &amp; Memory</h4>
-                <p data-i18n="about.pillar.life.desc">那些無法被量化、卻定義了一個人的事物。閱讀、記憶與生命的重量</p>
-              </div>
-            </div>
-          </div>
+          
 
         </div>
       </div>
     </div>
-  </section>
+  <div class="about-pillars-section"><div class="section-container"><h3 data-i18n="about.pillars.title">Five Pillars 五根柱子</h3><div class="about-pillar-grid"><div class="about-pillar-item"><h4><span class="pillar-dot" style="background:var(--accent-ai)"></span> 智能與秩序 Intelligence &amp; Order</h4><p data-i18n="about.pillar.ai.desc">當機器開始參與判斷，人與技術之間的秩序如何重新安排</p></div><div class="about-pillar-item"><h4><span class="pillar-dot" style="background:var(--accent-circular)"></span> 再生系統 Regenerative Systems</h4><p data-i18n="about.pillar.circular.desc">物質不該只有一次生命。從城市採礦到制度設計，重建資源流動的秩序</p></div><div class="about-pillar-item"><h4><span class="pillar-dot" style="background:var(--accent-faith)"></span> 文明與人性 Civilization &amp; Human Nature</h4><p data-i18n="about.pillar.faith.desc">在效率的洪流中，什麼讓人之所以為人。從神學到社會批判的持續追問</p></div><div class="about-pillar-item"><h4><span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與建構 Creation &amp; Enterprise</h4><p data-i18n="about.pillar.startup.desc">創業不只是造產品，是在真實世界中建造秩序。信任、風險與方法論的提煉</p></div><div class="about-pillar-item"><h4><span class="pillar-dot" style="background:var(--accent-life)"></span> 沉思與記憶 Reflections &amp; Memory</h4><p data-i18n="about.pillar.life.desc">那些無法被量化、卻定義了一個人的事物。閱讀、記憶與生命的重量</p></div></div></div></div></section>
 </div>
 
 <!-- ==================== FEED ==================== -->
