--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <meta property="og:description" content="在技術與文明的交匯處，重建秩序、再生系統、守護人性尊嚴。">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://paulkuo.tw">
+<link rel="icon" type="image/png" href="/favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="icon" type="image/png" href="/favicon.png">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&family=Noto+Sans+SC:wght@300;400;500;700&family=Noto+Sans+JP:wght@300;400;500;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/style.css">
@@ -492,7 +494,7 @@
   <section class="about-section">
     <div class="section-container">
       <div class="about-grid">
-        <div class="about-photo">PK</div>
+        <div class="about-photo"><img src="/paul-photo.png" alt="Paul Kuo"></div>
         <div class="about-content">
           <h2 data-i18n="about.name">Paul Kuo 郭曜郎</h2>
           <p data-i18n="about.intro">我的思考起點不是技術，而是秩序。</p>
