加入Paul個人照取代PK placeholder

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
   <section class="about-section">
     <div class="section-container">
       <div class="about-grid">
-        <div class="about-photo"><img src="/paul-photo.jpg" alt="Paul Kuo"></div>
+        <div class="about-photo"><img src="/paul-photo.png" alt="Paul Kuo"></div>
         <div class="about-content">
           <h2 data-i18n="about.name">Paul Kuo 郭曜郎</h2>
           <p data-i18n="about.intro">我的思考起點不是技術，而是秩序。</p>
