fix: restore and update contact text

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <div class="contact-grid">
         <div class="contact-text">
           <h2 data-i18n="contact.title">Let's Build<br>Something Together</h2>
-          <p data-i18n="contact.desc">系統再生策略、技術架構諮詢、台日跨境產業整合、<br>或只是想聊聊 — 歡迎來信。</p>
+          <p data-i18n="contact.desc">無論你是在思考如何讓技術回到人性與秩序的實作場景、想深化循環再生服務與架構布局、或希望探索台日跨境合作的可能，<br>都歡迎來信一起對話、激盪或合作。</p>
           <div class="social-links">
             <a href="https://x.com/paulkuo" class="social-link" target="_blank">𝕏 Twitter</a>
             <a href="https://www.linkedin.com/in/paulkuo" class="social-link" target="_blank">in LinkedIn</a>
