fix: correct LinkedIn and YouTube URLs

--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
           <p data-i18n="contact.desc">無論你是在思考如何讓技術回到人性與秩序的實作場景、想深化循環再生服務與架構布局、或希望探索台日跨境合作的可能，<br>都歡迎來信一起對話、激盪或合作。</p>
           <div class="social-links">
             <a href="https://x.com/paulkuo" class="social-link" target="_blank">𝕏 Twitter</a>
-            <a href="https://www.linkedin.com/in/paulkuo" class="social-link" target="_blank">in LinkedIn</a>
+            <a href="https://www.linkedin.com/in/kuoyaolang" class="social-link" target="_blank">in LinkedIn</a>
             <a href="https://www.threads.net/@zarqarwi" class="social-link" target="_blank">◉ Threads</a>
-            <a href="https://www.youtube.com/@KuoPaul" class="social-link" target="_blank">▶ YouTube</a>
+            <a href="https://www.youtube.com/@kuopaul8265" class="social-link" target="_blank">▶ YouTube</a>
             <a href="https://www.facebook.com/zarqarwi" class="social-link" target="_blank">📘 Facebook</a>
             <a href="https://www.instagram.com/zarqarwi" class="social-link" target="_blank">📷 Instagram</a>
             <a href="https://bsky.app/profile/paulkuo.bsky.social" class="social-link" target="_blank">🦋 Bluesky</a>
