--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Paul Kuo — Rebuilding Order in an Age of Intelligence</title>
-<meta name="description" content="Paul Kuo 郭曜郎 — 在技術與文明的交匯處，重建秩序、再生系統、守護人性尊嚴。">
+<meta name="description" content="Paul Kuo 郭曜郎 — 在技術與文明的交匯處，重建秩序、循環再利用、守護人性尊嚴。">
 <meta name="author" content="Paul Kuo">
 <meta name="robots" content="index, follow">
 <meta property="og:title" content="Paul Kuo — Rebuilding Order in an Age of Intelligence">
-<meta property="og:description" content="在技術與文明的交匯處，重建秩序、再生系統、守護人性尊嚴。">
+<meta property="og:description" content="在技術與文明的交匯處，重建秩序、循環再利用、守護人性尊嚴。">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://paulkuo.tw">
 <meta property="og:image" content="https://paulkuo.tw/paul-photo.jpg">
@@ -18,7 +18,7 @@
 <meta property="og:locale:alternate" content="ja">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Paul Kuo — Rebuilding Order in an Age of Intelligence">
-<meta name="twitter:description" content="在技術與文明的交匯處，重建秩序、再生系統、守護人性尊嚴。">
+<meta name="twitter:description" content="在技術與文明的交匯處，重建秩序、循環再利用、守護人性尊嚴。">
 <meta name="twitter:image" content="https://paulkuo.tw/paul-photo.jpg">
 <link rel="canonical" href="https://paulkuo.tw">
 <link rel="icon" type="image/png" href="/favicon.png">
@@ -38,14 +38,14 @@
       "alternateName": "郭曜郎",
       "url": "https://paulkuo.tw",
       "image": "https://paulkuo.tw/paul-photo.jpg",
-      "description": "在技術與文明的交匯處，重建秩序、再生系統、守護人性尊嚴。",
+      "description": "在技術與文明的交匯處，重建秩序、循環再利用、守護人性尊嚴。",
       "knowsAbout": ["Circular Economy","Artificial Intelligence","Urban Mining","Multi-Agent Cognitive Systems","Taiwan-Japan Industrial Cooperation","Theological Ethics","Startup Ecosystems"],
       "sameAs": [
         "https://x.com/paulkuo",
         "https://www.linkedin.com/in/kuoyaolang",
         "https://www.threads.net/@zarqarwi",
         "https://www.youtube.com/@kuopaul8265",
-        "https://www.facebook.com/zarqarwi",
+        "https://www.facebook.com/guo.yao.lang.2025?locale=zh_TW",
         "https://www.instagram.com/zarqarwi",
         "https://bsky.app/profile/paulkuo.bsky.social",
         "https://www.reddit.com/user/Constant-Variety1656"
@@ -106,11 +106,11 @@
         <p class="hero-tagline animate-in delay-1" data-i18n="hero.tagline1">從神學訓練到循環經濟，從創業現場到人工智慧——二十年來，我始終在處理同一個問題：當既有的秩序不再有效，什麼樣的結構值得被重建？</p>
         <p class="hero-tagline animate-in delay-2" style="margin-top:-20px;" data-i18n="hero.tagline2">技術是手段，不是目的。再生是方法，不是口號。真正的問題永遠是：在系統重組的過程中，人的判斷力、創造力與尊嚴，如何不被效率的邏輯吞噬。</p>
         <div class="hero-pillars animate-in delay-3">
-          <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-ai)"></span><span data-i18n="hero.pillar.ai">智能與秩序</span></span>
-          <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-circular)"></span><span data-i18n="hero.pillar.circular">再生系統</span></span>
-          <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-faith)"></span><span data-i18n="hero.pillar.faith">文明與人性</span></span>
-          <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-startup)"></span><span data-i18n="hero.pillar.startup">創造與建構</span></span>
-          <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-life)"></span><span data-i18n="hero.pillar.life">沉思與記憶</span></span>
+          <a href="#" class="pillar-tag" onclick="showPage('blog');setTimeout(()=>document.querySelector('[data-filter=ai]').click(),150)"><span class="pillar-dot" style="background:var(--accent-ai)"></span><span data-i18n="hero.pillar.ai">智能與秩序</span></a>
+          <a href="#" class="pillar-tag" onclick="showPage('blog');setTimeout(()=>document.querySelector('[data-filter=circular]').click(),150)"><span class="pillar-dot" style="background:var(--accent-circular)"></span><span data-i18n="hero.pillar.circular">循環再利用</span></a>
+          <a href="#" class="pillar-tag" onclick="showPage('blog');setTimeout(()=>document.querySelector('[data-filter=faith]').click(),150)"><span class="pillar-dot" style="background:var(--accent-faith)"></span><span data-i18n="hero.pillar.faith">文明與人性</span></a>
+          <a href="#" class="pillar-tag" onclick="showPage('blog');setTimeout(()=>document.querySelector('[data-filter=startup]').click(),150)"><span class="pillar-dot" style="background:var(--accent-startup)"></span><span data-i18n="hero.pillar.startup">創造與建構</span></a>
+          <a href="#" class="pillar-tag" onclick="showPage('blog');setTimeout(()=>document.querySelector('[data-filter=life]').click(),150)"><span class="pillar-dot" style="background:var(--accent-life)"></span><span data-i18n="hero.pillar.life">沉思與記憶</span></a>
         </div>
         <div class="hero-actions animate-in delay-4">
           <a href="#" class="btn-primary" data-i18n="hero.cta.read" onclick="showPage('blog')">閱讀思想</a>
@@ -128,7 +128,7 @@
           </div>
           <div class="hero-card">
             <div class="hero-card-label" style="color:var(--accent-circular)">
-              <span class="pillar-dot" style="background:var(--accent-circular)"></span> 再生系統
+              <span class="pillar-dot" style="background:var(--accent-circular)"></span> 循環再利用
             </div>
             <p data-i18n="hero.card2.text">城市不是資源的終點，而是下一輪循環的起點。都市採礦正在改寫我們對「廢棄」的定義。</p>
             <div class="hero-card-meta" data-i18n="hero.card2.meta">2025.12 · Medium</div>
@@ -228,7 +228,7 @@
           <h3 data-i18n="projects.circleflow.name">CircleFlow</h3>
           <p data-i18n="projects.circleflow.desc.short">循環經濟的數據基礎設施，讓資源的流向、價值與歸屬重新可見、可追蹤、可治理。</p>
           <div class="project-tags">
-            <span class="project-tag" data-i18n="projects.tag.circular">再生系統</span>
+            <span class="project-tag" data-i18n="projects.tag.circular">循環再利用</span>
             <span class="project-tag">AI</span>
             <span class="project-tag">Platform</span>
           </div>
@@ -257,7 +257,7 @@
             <a href="https://www.linkedin.com/in/kuoyaolang" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="在 LinkedIn 上連結 Paul Kuo">in LinkedIn</a>
             <a href="https://www.threads.net/@zarqarwi" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="在 Threads 上追蹤 Paul Kuo">◉ Threads</a>
             <a href="https://www.youtube.com/@kuopaul8265" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="訂閱 Paul Kuo 的 YouTube 頻道">▶ YouTube</a>
-            <a href="https://www.facebook.com/zarqarwi" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="在 Facebook 上追蹤 Paul Kuo">📘 Facebook</a>
+            <a href="https://www.facebook.com/guo.yao.lang.2025?locale=zh_TW" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="在 Facebook 上追蹤 Paul Kuo">📘 Facebook</a>
             <a href="https://www.instagram.com/zarqarwi" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="在 Instagram 上追蹤 Paul Kuo">📷 Instagram</a>
             <a href="https://bsky.app/profile/paulkuo.bsky.social" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="在 Bluesky 上追蹤 Paul Kuo">🦋 Bluesky</a>
             <a href="https://www.reddit.com/user/Constant-Variety1656" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="在 Reddit 上追蹤 Paul Kuo">🔴 Reddit</a>
@@ -300,7 +300,7 @@
     <aside class="blog-filters" role="group" aria-label="文章分類篩選">
       <button class="filter-btn active" data-filter="all" aria-pressed="true" data-i18n="filter.all">全部</button>
       <button class="filter-btn" data-filter="ai" aria-pressed="false" data-i18n="filter.ai">智能與秩序</button>
-      <button class="filter-btn" data-filter="circular" aria-pressed="false" data-i18n="filter.circular">再生系統</button>
+      <button class="filter-btn" data-filter="circular" aria-pressed="false" data-i18n="filter.circular">循環再利用</button>
       <button class="filter-btn" data-filter="faith" aria-pressed="false" data-i18n="filter.faith">文明與人性</button>
       <button class="filter-btn" data-filter="startup" aria-pressed="false" data-i18n="filter.startup">創造與建構</button>
       <button class="filter-btn" data-filter="life" aria-pressed="false" data-i18n="filter.life">沉思與記憶</button>
@@ -422,7 +422,7 @@
       <article class="content-card" data-pillar="circular" itemscope itemtype="https://schema.org/BlogPosting">
         <header>
           <div class="content-card-category" style="color:var(--accent-circular)">
-            <span class="pillar-dot" style="background:var(--accent-circular)"></span> <span itemprop="articleSection">再生系統</span>
+            <span class="pillar-dot" style="background:var(--accent-circular)"></span> <span itemprop="articleSection">循環再利用</span>
           </div>
           <h2 itemprop="headline" data-i18n="blog.page.circular1.title">CircleFlow 深度戰略分析</h2>
         </header>
@@ -438,7 +438,7 @@
       <article class="content-card" data-pillar="circular" itemscope itemtype="https://schema.org/BlogPosting">
         <header>
           <div class="content-card-category" style="color:var(--accent-circular)">
-            <span class="pillar-dot" style="background:var(--accent-circular)"></span> <span itemprop="articleSection">再生系統</span>
+            <span class="pillar-dot" style="background:var(--accent-circular)"></span> <span itemprop="articleSection">循環再利用</span>
           </div>
           <h2 itemprop="headline" data-i18n="blog.page.circular2.title">台灣循環經濟雙法修正總覽</h2>
         </header>
@@ -454,7 +454,7 @@
       <article class="content-card" data-pillar="circular" itemscope itemtype="https://schema.org/BlogPosting">
         <header>
           <div class="content-card-category" style="color:var(--accent-circular)">
-            <span class="pillar-dot" style="background:var(--accent-circular)"></span> <span itemprop="articleSection">再生系統</span>
+            <span class="pillar-dot" style="background:var(--accent-circular)"></span> <span itemprop="articleSection">循環再利用</span>
           </div>
           <h2 itemprop="headline" data-i18n="blog.page.circular3.title">循環經濟的城市採礦</h2>
         </header>
@@ -564,7 +564,7 @@
         <h2 data-i18n="projects.circleflow.name">CircleFlow</h2>
         <div class="prose"><p data-i18n="projects.circleflow.desc">AI 驅動的循環經濟數據基礎設施。連結廢棄物產生者與資源化業者，用數據重建產業物質流的可見性與可信度。</p></div>
         <div class="project-tags">
-          <span class="project-tag" data-i18n="projects.tag.circular">再生系統</span>
+          <span class="project-tag" data-i18n="projects.tag.circular">循環再利用</span>
           <span class="project-tag">AI</span>
           <span class="project-tag">Platform</span>
           <span class="project-tag">ESG</span>
@@ -576,11 +576,11 @@
       <article class="project-card sdti">
         <div class="project-icon" style="background:rgba(180,83,9,0.1)">🤝</div>
         <h2 data-i18n="projects.taiwan_japan.name">台日產業與技術整合</h2>
-        <div class="prose"><p data-i18n="projects.taiwan_japan.desc">在製造、生醫技術、再生系統與跨境貿易等領域推動台日合作。關注的不只是產業媒合，而是如何在不同制度與文化之間建立長期信任，讓技術與價值在更大的秩序中流動。</p></div>
+        <div class="prose"><p data-i18n="projects.taiwan_japan.desc">在製造、生醫技術、循環再利用與跨境貿易等領域推動台日合作。關注的不只是產業媒合，而是如何在不同制度與文化之間建立長期信任，讓技術與價值在更大的秩序中流動。</p></div>
         <div class="project-tags">
           <span class="project-tag" data-i18n="projects.tag.manufacturing">製造</span>
           <span class="project-tag" data-i18n="projects.tag.biomedical">生醫</span>
-          <span class="project-tag" data-i18n="projects.tag.circular">再生系統</span>
+          <span class="project-tag" data-i18n="projects.tag.circular">循環再利用</span>
           <span class="project-tag" data-i18n="projects.tag.crossborder">跨境貿易</span>
           <span class="project-tag" data-i18n="projects.tag.trust">信任結構</span>
         </div>
@@ -660,7 +660,7 @@
         </div>
       </div>
     </div>
-  <div class="about-pillars-section"><div class="section-container"><div class="about-pillar-grid"><div class="about-pillar-item"><h3><span class="pillar-dot" style="background:var(--accent-ai)"></span> 智能與秩序 Intelligence &amp; Order</h3><p data-i18n="about.pillar.ai.desc">當機器開始參與判斷，人與技術之間的秩序如何重新安排</p></div><div class="about-pillar-item"><h3><span class="pillar-dot" style="background:var(--accent-circular)"></span> 再生系統 Regenerative Systems</h3><p data-i18n="about.pillar.circular.desc">物質不該只有一次生命。從城市採礦到制度設計，重建資源流動的秩序</p></div><div class="about-pillar-item"><h3><span class="pillar-dot" style="background:var(--accent-faith)"></span> 文明與人性 Civilization &amp; Human Nature</h3><p data-i18n="about.pillar.faith.desc">在效率的洪流中，什麼讓人之所以為人。從神學到社會批判的持續追問</p></div><div class="about-pillar-item"><h3><span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與建構 Creation &amp; Enterprise</h3><p data-i18n="about.pillar.startup.desc">創業不只是造產品，是在真實世界中建造秩序。信任、風險與方法論的提煉</p></div><div class="about-pillar-item"><h3><span class="pillar-dot" style="background:var(--accent-life)"></span> 沉思與記憶 Reflections &amp; Memory</h3><p data-i18n="about.pillar.life.desc">那些無法被量化、卻定義了一個人的事物。閱讀、記憶與生命的重量</p></div></div></div></div></section>
+  <div class="about-pillars-section"><div class="section-container"><div class="about-pillar-grid"><div class="about-pillar-item" onclick="showPage('blog');setTimeout(()=>document.querySelector('[data-filter=ai]').click(),150)" style="cursor:pointer"><h3><span class="pillar-dot" style="background:var(--accent-ai)"></span> 智能與秩序 Intelligence &amp; Order</h3><p data-i18n="about.pillar.ai.desc">當機器開始參與判斷，人與技術之間的秩序如何重新安排</p></div><div class="about-pillar-item" onclick="showPage('blog');setTimeout(()=>document.querySelector('[data-filter=circular]').click(),150)" style="cursor:pointer"><h3><span class="pillar-dot" style="background:var(--accent-circular)"></span> 循環再利用 Recycling &amp; Reuse</h3><p data-i18n="about.pillar.circular.desc">物質不該只有一次生命。從城市採礦到制度設計，重建資源流動的秩序</p></div><div class="about-pillar-item" onclick="showPage('blog');setTimeout(()=>document.querySelector('[data-filter=faith]').click(),150)" style="cursor:pointer"><h3><span class="pillar-dot" style="background:var(--accent-faith)"></span> 文明與人性 Civilization &amp; Human Nature</h3><p data-i18n="about.pillar.faith.desc">在效率的洪流中，什麼讓人之所以為人。從神學到社會批判的持續追問</p></div><div class="about-pillar-item" onclick="showPage('blog');setTimeout(()=>document.querySelector('[data-filter=startup]').click(),150)" style="cursor:pointer"><h3><span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與建構 Creation &amp; Enterprise</h3><p data-i18n="about.pillar.startup.desc">創業不只是造產品，是在真實世界中建造秩序。信任、風險與方法論的提煉</p></div><div class="about-pillar-item" onclick="showPage('blog');setTimeout(()=>document.querySelector('[data-filter=life]').click(),150)" style="cursor:pointer"><h3><span class="pillar-dot" style="background:var(--accent-life)"></span> 沉思與記憶 Reflections &amp; Memory</h3><p data-i18n="about.pillar.life.desc">那些無法被量化、卻定義了一個人的事物。閱讀、記憶與生命的重量</p></div></div></div></div></section>
 </div>
 
 <!-- ==================== FEED ==================== -->
@@ -759,8 +759,8 @@ document.querySelectorAll('.filter-btn').forEach(btn => {
 function toggleMobileNav() {
   const links = document.querySelector('.nav-links');
   const btn = document.querySelector('.nav-hamburger');
-  const isOpen = links.style.display === 'flex';
-  links.style.display = isOpen ? 'none' : 'flex';
+  const isOpen = links.classList.contains('mobile-open');
+  if(isOpen){links.classList.remove('mobile-open')}else{links.classList.add('mobile-open')};
   btn.setAttribute('aria-expanded', isOpen ? 'false' : 'true');
   btn.setAttribute('aria-label', isOpen ? '開啟導覽選單' : '關閉導覽選單');
 }
