fix: add properly sized favicons (16/32/180px)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <meta name="twitter:description" content="在技術與文明的交匯處，重建秩序、循環再利用、守護人性尊嚴。">
 <meta name="twitter:image" content="https://paulkuo.tw/paul-photo.jpg">
 <link rel="canonical" href="https://paulkuo.tw">
-<link rel="icon" type="image/png" href="/favicon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="alternate" type="application/ld+json" href="/llm-context.json" title="Machine-readable article index">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
